Info text no longer shifts inputs

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ a {
 }
 
 .infoText {
+	min-height: 4rem;
 	color: rgb(255,123,0);
 	text-shadow:
 		-1px -1px 0 #000,
